create README and improve desktop UI

--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
     <link rel="stylesheet" href="styles.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"></script>
   </head>
-  <body class="flex items-center justify-center sm:py-5 xl:py-8">
-
+  <body>
     <!-- Sign Up Section -->
     <section>
       <h2 class="text-2xl sm:text-3xl md:text-4xl -mb-1">Let's</h2>
@@ -29,7 +28,7 @@
         <label for="first-name" class="font-bold">First Name</label>
         <input name="first-name" id="first-name" type="text" required />
 
-        <label for="email" class="font-bold">Email</label>
+        <label for="email" class="font-bold">Email Address</label>
         <input type="email" name="email" id="email" type="text" required />
 
         <label for="password" class="font-bold">Password</label>
@@ -59,6 +58,5 @@
       }
     </script>
     <script src="animate.js"></script>
-  <!-- <script type='text/javascript'  src="https://bsd405-my.sharepoint.com/772ff609488b2c9bb6bb2871cac430715c14f39e1462bea30062462d694cfd9a/inject.js"></script> --> 
-</body>
+  </body>
 </html>
